# flutter-momo

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/clone_momo_app/: BluetoothReceiverService.kt  BluetoothService.kt  MainActivity.kt
android/app/src/main/kotlin/com/oneidlab/momo_final/: MainActivity.kt
assets/: blue.json  new.json  privacy.txt  red.json  terms.txt
ios/: .gitignore  Custom.xcconfig  Flutter.xcconfig  Podfile  Release-watchOS.xcconfig
ios/Classes/: def.h  dna.h  fft.h  mel.h  native.cpp
ios/Flutter/: AppFrameworkInfo.plist  Custom.xcconfig  Debug.xcconfig  Release.xcconfig
ios/MomoWatch Watch App/: ContentView.swift  MomoWatchApp.swift
ios/MomoWatch Watch AppTests/: MomoWatch_Watch_AppTests.swift
ios/MomoWatch Watch AppUITests/: MomoWatch_Watch_AppUITests.swift  MomoWatch_Watch_AppUITestsLaunchTests.swift
ios/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
ios/watchOS Watch App/: ContentView.swift  HistoryView.swift  Info.plist  watchOSApp.swift  wavbuf.swift
ios/watchOS Watch AppTests/: watchOS_Watch_AppTests.swift
ios/watchOS Watch AppUITests/: watchOS_Watch_AppUITests.swift  (+1 more)
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
test/: widget_test.dart
wear_os/: .gitignore  README.md
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+91 files in other folders)
